--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -17,7 +17,7 @@ jobs:
             asset_name: state-multiplayer-remover-linux-amd64
           - os: windows-latest
             artifact_name: state-multiplayer-remover.exe
-            asset_name: state-multiplayer-remover-windows-amd64
+            asset_name: state-multiplayer-remover.exe
           - os: macos-latest
             artifact_name: state-multiplayer-remover
             asset_name: state-multiplayer-remover-macos-amd64
